Quorum3/Library/Tests/Templating/Pass/TemplateUsingTwoIntegers_3.quorum
class Main
    action Main
        Entry<integer,integer> something
        something:setValue(10)
        something:setKey(5)
        integer i = something:getValue()
        integer j = something:getKey()
        output i
        output j
    end
end