Quorum3/Library/Tests/Templating/Fail/ArrayFilledWithWrongType.quorum
use Libraries.Containers.Array
class Main
    action main
       Array<integer> iArray
       Number num
       iArray:Set(0, num)
       iArray:Set(1, 1)
    end
end